# Neurocore

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  DeepLearning.todo.md  Makefile  Mnist.py  Neurocore.todo.md  README.md  cmake_install.cmake  networkTest.net  run_test.sh  setup.py  test.net  test.py
Models/: MNIST_1.net  MNIST_11.net  MNIST_3.net  MNIST_7.net
Neurocore/include/datasetsBehaviour/: DataLoader.h
Neurocore/include/gpuComputation/: CUDA.cuh
Neurocore/include/matrix/: Matrix.cuh  MatrixPy.hpp
Neurocore/include/network/: InitFunc.cuh  Network.h
Neurocore/include/network/activation/: Activation.cuh  ReLU.h
Neurocore/include/network/layers/: AveragePooling.cuh  ConvLayer.cuh  DropoutFCL.cuh  FCL.cuh  MaxPooling.cuh  Reshape.cuh
Neurocore/include/network/loss/: MSE.cuh
Neurocore/include/network/optimizers/: Adam.h
Neurocore/include/pythonWrapper/: Activations.hpp  DataLoader.hpp  Layers.hpp  Loss.hpp  Matrix.hpp  Opti.hpp
Neurocore/include/tests/: LayerTests.h  MatrixTests.h  NetworkTests.h
Neurocore/include/tools/: ProgressBar.h  Unit.h
Neurocore/network/: Activation.py  CompilationTools.py  Config.py  Layers.py  Matrix.py  MatrixTypes.py  Network.py
Neurocore/templates/: CMakeLists.txt
compilation/: build.sh  rebuild.sh
datasets/mnist/: mnist_train.csv
examples/: Mnist.py  MnistConv.py
include/datasetsBehaviour/: DataLoader.h  ImagePreProcessing.cuh
include/gpuComputation/: CUDA.cuh
include/matrix/: Matrix.cuh  MatrixGpu.cuh  MatrixPy.hpp
include/network/: Activation.cuh  Allocator.h  InitFunc.cuh  LayerShape.cuh  Loss.cuh  Network.h  Optimizers.cuh
include/network/activation/: Activation.cuh  LeakyReLU.h  ReLU.h  Sigmoid.h  SigmoidPrime.h  Softmax.h  Tanh.h
include/network/layers/: AveragePooling.cuh  ConvLayer.cuh  ConvLayer.h  DropoutFCL.cuh  FCL.cuh  Flatten.cuh  InputLayer.cuh  Layer.cuh  MaxPooling.cuh  PoolingLayer.cuh  Reshape.cuh
include/network/loss/: CrossEntropy.cuh  CrossEntropy.h  Loss.h  MSE.cuh  MSE.h
include/network/optimizers/: Adam.h  Constant.h  Optimizer.h
include/tests/: ActivationTests.h  LayerTests.h  MatrixTests.h  NetworkTests.h
include/tools/: ProgressBar.h  vector.cuh
models/: MNIST_11.net  MNIST_2.net  MNIST_4.net  MNIST_5.net  MNIST_6.net
python_lib/: CMakeLists.txt  Mnist.py  network.cpp  setup.py  test.py
python_lib/deep_learning_lib.egg-info/: PKG-INFO  SOURCES.txt
python_lib/python_lib.egg-info/: PKG-INFO  SOURCES.txt
python_lib/src/: Compile.py
python_lib/src/network/: Activation.py  CompilationTools.py  Layers.py  Loss.py  Matrix.py  MatrixTypes.py  Network.py
src/: Activation.cpp  Activation.cu  Activation.cuh  Activation.h  Allocator.cpp  AveragePooling.cpp  AveragePooling.cu  AveragePooling.cuh  AveragePooling.h  CNN.cpp  CNN.h  CUDA.cuh  ConvLayer.cpp  ConvLayer.cu  ConvLayer.cuh  ConvLayer.h  DataLoader.cpp  DataLoader.cu  DataLoader.cuh  DataLoader.h  DropoutFCL.cpp  DropoutFCL.cu  DropoutFCL.cuh  DropoutFCL.h  FCL.cpp  FCL.cu  FCL.cuh  FCL.h  Flatten.cpp  Flatten.cu  Flatten.cuh  Flatten.h  GUI.cpp  GUI.cu  GUI.h  ImagePreProcessing.cpp  ImagePreProcessing.cu  ImagePreProcessing.cuh  ImagePreProcessing.h  InitFunc.cpp  (+51 more)
src/Examples/: Mnist.cpp  Mnist.cu  Mnist.cuh  Mnist.h  Quickdraw.cpp  Quickdraw.cu  Quickdraw.cuh  Quickdraw.h  Tests.cpp  Tests.cu  Tests.h  Tools.cpp  Tools.cu  Tools.h
src/Tests/: MatrixTests.cpp  MatrixTests.h  Tests.cpp
src/Tools/: Bytes.cpp  Bytes.cu  Bytes.cuh  Bytes.h  ManagerIO.cpp  ManagerIO.cu  ManagerIO.cuh  ManagerIO.h  ProgressBar.cpp  ProgressBar.cu  ProgressBar.h  Seiralizer.cpp  Seiralizer.cu  Serializer.cuh  Serializer.h  Unit.cpp  Unit.cu  Unit.cuh  Unit.h
src/datasetBehaviour/: DataLoader.cpp  ImagePreProcessing.cu
src/examples/: Mnist.cpp  Quickdraw.cpp  Tests.cpp  Tools.cpp
src/gpuComputation/: CUDA.cu
src/matrix/: Matrix.cpp  Matrix.cu  MatrixGPU.cu  MatrixOperationsOriented.cpp  OptimizedMatrix.cpp
src/network/: Activation.cu  InitFunc.cu  LayerShape.cu  Loss.cu  Network.cpp  Optimizers.cu
src/network/layers/: AveragePooling.cu  ConvLayer.cu  DropoutFCL.cu  FCL.cu  Flatten.cu  InputLayer.cu  Layer.cu  MaxPooling.cu  PoolingLayer.cu
src/pythonWrapper/: Activation.cpp  Dataloader.cpp  Layers.cpp  Loss.cpp  Matrix.cpp  Network.cpp  Opti.cpp
src/testPython/: firstNetwork.py  getFunctions.py
src/tests/: ActivationTests.cpp  LayerTests.cpp  LossTests.cpp  MatrixTests.cpp  NetworkTests.cpp  Tests.cpp
src/tools/: ProgressBar.cpp  Unit.cpp
src/ui/: GUI.cpp
tests/: CMakeLists.txt  main.cpp
tests/matrix/: CUDA.cu  OptimizedMatrix.cpp
tests/network/: Allocator.cpp  Operations.cpp
tests/tests/: ActivationTests.cpp  LayerTests.cpp  LossTests.cpp  MatrixTests.cpp  NetworkTests.cpp  Tests.cpp
tests/tools/: Bytes.cpp  ManagerIO.cpp  Seiralizer.cpp
